--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,15 @@ a {
 }
 
 /* CONTACT US PAGE */
+
+
+/* FOOTER */
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: lightsteelblue;
+    color: white;
+    text-align: center;
+}
