--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 ul {
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     margin: 32px;
@@ -40,6 +41,13 @@ a {
 /* FAMILY PAGE */
 .parent-container, .child-container, .pet-container {
     display: flex;
+    justify-content: space-evenly;
+}
+
+/* PHOTO ALBUM PAGE */
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
