Updated family page markup and simplified css styling

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ a {
 }
 
 /* FAMILY PAGE */
-.parent-container, .child-container, .pet-container {
+.container {
     display: flex;
     justify-content: space-evenly;
 }
