--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     width: 100%;
     height: 100%;
+    color: #251b37;
 }
 
 /* NAVBAR */
@@ -10,17 +11,34 @@ body {
     display: flex;
     justify-content: center;
     font-size: 48px;
-}
-
-.nav-links {
-    font-size: 48px;
-    font-weight: bold;
+    color: #372948;
 }
 
 .nav-bar {
-    border: 5px double lightsteelblue;
-    border-radius: 10px;
-    margin: 0 32px 0;
+    overflow: hidden;
+    background-color: #372948;
+    text-align: center;
+    height: 80px;
+}
+
+.nav-bar a {
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 36px;
+    font-weight: bold;
+    display: inline-block;
+    height: 100%;
+    color: #FFCACA;
+}
+
+.nav-bar a.active {
+    background-color: #ffccd2;
+    color: #372948;
+}
+
+.nav-bar a:hover {
+    background-color: #705492;
+    color: white;
 }
 
 ul {
