--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     width: 100%;
     height: 100%;
     color: #251b37;
+    background-color: #ffecef;
 }
 
 /* NAVBAR */
@@ -32,7 +33,7 @@ body {
 }
 
 .nav-bar a.active {
-    background-color: #ffccd2;
+    background-color: #ffb3bb;
     color: #372948;
 }
 
