Updated footer color

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ a {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: lightsteelblue;
+    background-color: #372948;
     color: white;
     text-align: center;
 }
